--- a/TASK_01/index.html
+++ b/TASK_01/index.html
@@ -5,18 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio | Harshraj</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
 </head>
 
 <body>
-  <header>
+  <header role="banner">
+    <nav>
+      <a href="#" class="logo"><i class="fas fa-home"></i></a>
+      <ul class="nav-links">
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     <div id="particles-js">
       <div class="centered-text">
-        <h1>Welcome</h1>
-        <h1>I'm <span>HARSHRAJ</span>!</h1>
+        <h1>Hi👋🏻, I'm <span>HARSHRAJ</span>!</h1>
       </div>
     </div>
   </header>
@@ -24,7 +33,7 @@
     <section id="about-me">
       <div class="about-me">ABOUT ME</div>
       <div class="container">
-        <img src="picture.png" alt="Myself" />
+        <img src="assets/picture.png" alt="Myself" />
         <p>
           Hello, I'm Harshraj! I'm a passionate web developer with a love for
           coding and creating meaningful projects. Currently, I'm exploring
@@ -32,17 +41,20 @@
           solutions.
         </p>
       </div>
+      <hr>
     </section>
 
     <section id="skills">
       <h2 class="skills-heading">Skills <i class="fas fa-code"></i></h2>
       <div class="skill-sections">
-        <div>
+        <div class="Languages">
           <h3>Programming Languages</h3>
-          <img src="assets/c-.png" alt="">
+          <div class="Languages-icon">
+          <img src="assets/c++.png" alt="">
           <img src="assets/java.png" alt="">
           <img src="assets/python.png" alt="">
           <img src="assets/js.png" alt="">
+        </div>
         </div>
         <div class="development">
           <div class="Web">
@@ -107,6 +119,32 @@
       </div>
     </section>
 
+    <section id="projects">
+      <div class="project-container">
+          <h2>My Projects</h2>
+          <div class="project-grid">
+              <div class="project">
+                  <img src="assets/Sudoku.jpeg" alt="Sudoku Game">
+                  <h3>Sudoku Game</h3>
+                  <p>Challenge your logic skills with our interactive Sudoku game. Featuring multiple difficulty levels and a clean, intuitive interface, this project combines advanced algorithms with a user-friendly design to deliver an engaging puzzle experience.</p>
+                  <a href="#">View Project</a>
+              </div>
+              <div class="project">
+                  <img src="assets/To-Do-List.png" alt="To-Do List">
+                  <h3>To-Do List</h3>
+                  <p>Stay organized with our efficient To-Do List application. This project offers a sleek design, easy task management, and local storage to keep your tasks saved between sessions. Perfect for personal productivity and project management.</p>
+                  <a href="#">View Project</a>
+              </div>
+              <div class="project">
+                  <img src="assets/Tic-Tac-Toe.png" alt="Tic-Tac-Toe Game">
+                  <h3>Tic-Tac-Toe Game</h3>
+                  <p>Enjoy a classic game of Tic-Tac-Toe with a modern twist. This project includes an AI opponent, responsive design for all devices, and engaging gameplay. It's a great demonstration of game logic and interactive UI design.</p>
+                  <a href="#">View Project</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
     <section id="resume">
       <div class="container">
         <h2>HERE'S MY RESUME</h2>
@@ -114,11 +152,11 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section id="contact">
       <h1>
         <a href="contact.html" style="text-decoration: none; color: inherit">Contact</a>
       </h1>
-      <div class="container">
+      <div class="contact-container">
         <div class="contact_text">
           <p>
             Have inquiries, suggestions, or projects in mind? Interested in
