--- a/TASK_02/index.html
+++ b/TASK_02/index.html
@@ -62,9 +62,7 @@
       </div>
     </main>
 
-    <footer>
-      <p>Copyright &copy; 2024 - All rights reserved.<br /></p>
-    </footer>
+    <footer>Copyright &copy; 2024 - All rights reserved.</footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.2.0/math.js"></script>
     <script src="script.js"></script>
