--- a/TASK_02/index.html
+++ b/TASK_02/index.html
@@ -2,69 +2,453 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/calculator.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Calculator</title>
+    <title>Global - Travel agancy</title>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <header>
-      <h1>Calculator</h1>
+    <header class="header" data-header>
+      <div class="overlay" data-overlay></div>
+      <div class="header-top">
+        <div class="container">
+          <a href="tel:+91-1234567890" class="helpline-box">
+            <div class="icon-box">
+              <ion-icon name="call-outline"></ion-icon>
+            </div>
+
+            <div class="wrapper">
+              <p class="helpline-title">For Further Inquires :</p>
+
+              <p class="helpline-number">+91-1234567890</p>
+            </div>
+          </a>
+
+          <a href="#" class="logo">
+            <img src="favicon.svg" alt="Tourly logo" />
+          </a>
+
+          <div class="header-btn-group">
+            <button class="search-btn" aria-label="Search">
+              <ion-icon name="search"></ion-icon>
+            </button>
+
+            <button
+              class="nav-open-btn"
+              aria-label="Open Menu"
+              data-nav-open-btn
+            >
+              <ion-icon name="menu-outline"></ion-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="header-bottom">
+        <div class="container">
+          <ul class="social-list">
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-youtube"></ion-icon>
+              </a>
+            </li>
+          </ul>
+
+          <nav class="navbar" data-navbar>
+            <div class="navbar-top">
+              <a href="#" class="logo">
+                <img src="favicon.svg" alt="logo" />
+              </a>
+
+              <button
+                class="nav-close-btn"
+                aria-label="Close Menu"
+                data-nav-close-btn
+              >
+                <ion-icon name="close-outline"></ion-icon>
+              </button>
+            </div>
+
+            <ul class="navbar-list">
+              <li>
+                <a href="#home" class="navbar-link" data-nav-link>home</a>
+              </li>
+
+              <li>
+                <a href="#" class="navbar-link" data-nav-link>about us</a>
+              </li>
+
+              <li>
+                <a href="#destination" class="navbar-link" data-nav-link
+                  >destination</a
+                >
+              </li>
+
+              <li>
+                <a href="#package" class="navbar-link" data-nav-link
+                  >packages</a
+                >
+              </li>
+
+              <li>
+                <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
+              </li>
+
+              <li>
+                <a href="#contact" class="navbar-link" data-nav-link
+                  >contact us</a
+                >
+              </li>
+            </ul>
+          </nav>
+
+          <button class="btn btn-primary">Book Now</button>
+        </div>
+      </div>
     </header>
 
     <main>
-      <div class="top-panel" aria-live="polite">0</div>
-      <div class="bottom-panel">
-        <div class="left-container">
-          <button class="button" id="radian">Radian</button>
-          <button class="button" id="degree">Degree</button>
-          <button class="button" id="factorial">x!</button>
-          <button class="button" id="open-parenthesis">(</button>
-          <button class="button" id="close-parenthesis">)</button>
-          <button class="button" id="percent">%</button>
-          <button class="button" id="clear">AC</button>
-          <button class="button" id="reciprocal">1/x</button>
-          <button class="button" id="sin">sin</button>
-          <button class="button" id="log">log</button>
-          <button class="button" id="number7">7</button>
-          <button class="button" id="number8">8</button>
-          <button class="button" id="number9">9</button>
-          <button class="button" id="divide">/</button>
-          <button class="button" id="pi">π</button>
-          <button class="button" id="cos">cos</button>
-          <button class="button" id="log10">log10</button>
-          <button class="button" id="number4">4</button>
-          <button class="button" id="number5">5</button>
-          <button class="button" id="number6">6</button>
-          <button class="button" id="multiply">*</button>
-          <button class="button" id="e">e</button>
-          <button class="button" id="tan">tan</button>
-          <button class="button" id="square-root">sqrt</button>
-          <button class="button" id="number1">1</button>
-          <button class="button" id="number2">2</button>
-          <button class="button" id="number3">3</button>
-          <button class="button" id="subtract">-</button>
-          <button class="button" id="ans">Ans</button>
-          <button class="button" id="exponent">exp</button>
-          <button class="button" id="power">x^y</button>
-          <button class="button" id="number0">0</button>
-          <button class="button" id="decimal">.</button>
-          <button class="button" id="equal">=</button>
-          <button class="button" id="add">+</button>
-        </div>
-        <div class="right-container">
-          <div class="right-container-text">History</div>
-          <hr />
-          <div class="right-container-list"></div>
-          <div><button class="right-container-clear">Clear</button></div>
-        </div>
-      </div>
+      <article>
+        <section class="hero" id="home">
+          <div class="container">
+            <h2 class="h1 hero-title">Adventure Awaits: Discover the World</h2>
+
+            <p class="hero-text">
+              Embark on Unforgettable Adventures Around the Globe. Discover Hidden Gems, Experience Diverse Cultures, and Create Lasting Memories with Our Expertly Curated Travel Packages.          </p>
+
+            <div class="btn-group">
+              <button class="btn btn-primary">Learn more</button>
+
+              <button class="btn btn-secondary">Book now</button>
+            </div>
+          </div>
+        </section>
+        
+        <section class="tour-search">
+          <div class="container">
+            <form action="" class="tour-search-form">
+              <div class="input-wrapper">
+                <label for="destination" class="input-label"
+                  >Search Destination*</label
+                >
+
+                <input
+                  type="text"
+                  name="destination"
+                  id="destination"
+                  required
+                  placeholder="Enter Destination"
+                  class="input-field"
+                />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="people" class="input-label">Pax Number*</label>
+
+                <input
+                  type="number"
+                  name="people"
+                  id="people"
+                  required
+                  placeholder="No.of People"
+                  class="input-field"
+                />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="checkin" class="input-label">Checkin Date**</label>
+
+                <input
+                  type="date"
+                  name="checkin"
+                  id="checkin"
+                  required
+                  class="input-field"
+                />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="checkout" class="input-label">Checkout Date*</label>
+
+                <input
+                  type="date"
+                  name="checkout"
+                  id="checkout"
+                  required
+                  class="input-field"
+                />
+              </div>
+
+              <button type="submit" class="btn btn-secondary">
+                Inquire now
+              </button>
+            </form>
+          </div>
+        </section>
+
+        <section class="popular" id="destination">
+          <div class="container">
+            <p class="section-subtitle">Uncover place</p>
+
+            <h2 class="h2 section-title">Popular destination</h2>
+
+            <p class="section-text">
+              Discover the world's most sought-after travel spots. Whether you're dreaming of pristine beaches, bustling cities, or serene mountain retreats, our curated list of popular destinations offers something for every traveler.
+            </p>
+
+            <ul class="popular-list">
+              <li>
+                <div class="popular-card">
+                  <figure class="card-img">
+                    <img
+                      src="./assets/images/popular-1.jpg"
+                      alt="San miguel, italy"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <div class="card-content">
+                    <div class="card-rating">
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                    </div>
+
+                    <p class="card-subtitle">
+                      <a href="#">Italy</a>
+                    </p>
+
+                    <h3 class="h3 card-title">
+                      <a href="#">San miguel</a>
+                    </h3>
+
+                    <p class="card-text">
+                      The city is known for its well-preserved colonial-style architecture and historic landmarks.
+                    </p>
+                  </div>
+                </div>
+              </li>
+
+              <li>
+                <div class="popular-card">
+                  <figure class="card-img">
+                    <img
+                      src="./assets/images/popular-2.jpg"
+                      alt="Burj khalifa, dubai"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <div class="card-content">
+                    <div class="card-rating">
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                    </div>
+
+                    <p class="card-subtitle">
+                      <a href="#">Dubai</a>
+                    </p>
+
+                    <h3 class="h3 card-title">
+                      <a href="#">Burj khalifa</a>
+                    </h3>
+
+                    <p class="card-text">
+                      The Burj Khalifa is a skyscraper in Dubai, United Arab Emirates. It is the world's tallest structure.
+                    </p>
+                  </div>
+                </div>
+              </li>
+
+              <li>
+                <div class="popular-card">
+                  <figure class="card-img">
+                    <img
+                      src="./assets/images/popular-3.jpg"
+                      alt="Kyoto temple, japan"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <div class="card-content">
+                    <div class="card-rating">
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                      <ion-icon name="star"></ion-icon>
+                    </div>
+
+                    <p class="card-subtitle">
+                      <a href="#">Japan</a>
+                    </p>
+
+                    <h3 class="h3 card-title">
+                      <a href="#">Kyoto temple</a>
+                    </h3>
+
+                    <p class="card-text">
+                      It's a Zen Buddhist shrine, and its name is often translated to “Temple of the Golden Pavilion.”
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+
+            <button class="btn btn-primary">More destintion</button>
+          </div>
+        </section>
+        <section class="cta" id="contact">
+          <div class="container">
+            <div class="cta-content">
+              <p class="section-subtitle">Call To Action</p>
+
+              <h2 class="h2 section-title">
+                Ready For Unforgatable Travel. Remember Us!
+              </h2>
+
+            </div>
+
+            <button class="btn btn-secondary">Contact Us !</button>
+          </div>
+        </section>
+      </article>
     </main>
 
-    <footer>Copyright &copy; 2024 - All rights reserved.</footer>
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-brand">
+            <a href="#" class="logo">
+              <img src="favicon.svg" alt="Tourly logo" /> 
+            </a>
+            <h3>Global - Travel Agency</h3>
+            <p class="footer-text">
+              Explore the World with Us: Crafting Unforgettable Journeys and Experiences. Let Your Adventure Begin Here.
+            </p>
+          </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.2.0/math.js"></script>
-    <script src="script.js"></script>
+          <div class="footer-contact">
+            <h4 class="contact-title">Contact Us</h4>
+
+            <p class="contact-text">Feel free to contact and reach us !!</p>
+
+            <ul>
+              <li class="contact-item">
+                <ion-icon name="call-outline"></ion-icon>
+
+                <a href="tel:+911234567890" class="contact-link"
+                  >+91-1234567890</a
+                >
+              </li>
+
+              <li class="contact-item">
+                <ion-icon name="mail-outline"></ion-icon>
+
+                <a href="mailto:support.global.com" class="contact-link"
+                  >support.global.com</a
+                >
+              </li>
+
+              <li class="contact-item">
+                <ion-icon name="location-outline"></ion-icon>
+
+                <address>New Delhi, India</address>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-form">
+            <p class="form-text">
+              Subscribe our newsletter for more update & news !!
+            </p>
+
+            <form action="" class="form-wrapper">
+              <input
+                type="email"
+                name="email"
+                class="input-field"
+                placeholder="Enter Your Email"
+                required
+              />
+
+              <button type="submit" class="btn btn-secondary">Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="container">
+          <p class="copyright">
+            &copy; 2024 <a href="">Global - Travel Agency </a>. All rights reserved
+          </p>
+
+          <ul class="footer-bottom-list">
+            <li>
+              <a href="#" class="footer-bottom-link">Privacy Policy</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer-bottom-link">Term & Condition</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer-bottom-link">FAQ</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
+    <!-- 
+    - #GO TO TOP
+  -->
+
+    <a href="#top" class="go-top" data-go-top>
+      <ion-icon name="chevron-up-outline"></ion-icon>
+    </a>
+
+    <!-- 
+    - custom js link
+  -->
+    <script src="./assets/js/script.js"></script>
+
+    <!-- 
+    - ionicon link
+  -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
