--- a/TASK_02/index.html
+++ b/TASK_02/index.html
@@ -105,16 +105,6 @@
               </li>
 
               <li>
-                <a href="#package" class="navbar-link" data-nav-link
-                  >packages</a
-                >
-              </li>
-
-              <li>
-                <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
-              </li>
-
-              <li>
                 <a href="#contact" class="navbar-link" data-nav-link
                   >contact us</a
                 >
@@ -134,7 +124,10 @@
             <h2 class="h1 hero-title">Adventure Awaits: Discover the World</h2>
 
             <p class="hero-text">
-              Embark on Unforgettable Adventures Around the Globe. Discover Hidden Gems, Experience Diverse Cultures, and Create Lasting Memories with Our Expertly Curated Travel Packages.          </p>
+              Embark on Unforgettable Adventures Around the Globe. Discover
+              Hidden Gems, Experience Diverse Cultures, and Create Lasting
+              Memories with Our Expertly Curated Travel Packages.
+            </p>
 
             <div class="btn-group">
               <button class="btn btn-primary">Learn more</button>
@@ -143,7 +136,7 @@
             </div>
           </div>
         </section>
-        
+
         <section class="tour-search">
           <div class="container">
             <form action="" class="tour-search-form">
@@ -213,7 +206,10 @@
             <h2 class="h2 section-title">Popular destination</h2>
 
             <p class="section-text">
-              Discover the world's most sought-after travel spots. Whether you're dreaming of pristine beaches, bustling cities, or serene mountain retreats, our curated list of popular destinations offers something for every traveler.
+              Discover the world's most sought-after travel spots. Whether
+              you're dreaming of pristine beaches, bustling cities, or serene
+              mountain retreats, our curated list of popular destinations offers
+              something for every traveler.
             </p>
 
             <ul class="popular-list">
@@ -245,7 +241,8 @@
                     </h3>
 
                     <p class="card-text">
-                      The city is known for its well-preserved colonial-style architecture and historic landmarks.
+                      The city is known for its well-preserved colonial-style
+                      architecture and historic landmarks.
                     </p>
                   </div>
                 </div>
@@ -279,7 +276,8 @@
                     </h3>
 
                     <p class="card-text">
-                      The Burj Khalifa is a skyscraper in Dubai, United Arab Emirates. It is the world's tallest structure.
+                      The Burj Khalifa is a skyscraper in Dubai, United Arab
+                      Emirates. It is the world's tallest structure.
                     </p>
                   </div>
                 </div>
@@ -313,7 +311,8 @@
                     </h3>
 
                     <p class="card-text">
-                      It's a Zen Buddhist shrine, and its name is often translated to “Temple of the Golden Pavilion.”
+                      It's a Zen Buddhist shrine, and its name is often
+                      translated to “Temple of the Golden Pavilion.”
                     </p>
                   </div>
                 </div>
@@ -331,7 +330,6 @@
               <h2 class="h2 section-title">
                 Ready For Unforgatable Travel. Remember Us!
               </h2>
-
             </div>
 
             <button class="btn btn-secondary">Contact Us !</button>
@@ -345,11 +343,12 @@
         <div class="container">
           <div class="footer-brand">
             <a href="#" class="logo">
-              <img src="favicon.svg" alt="Tourly logo" /> 
+              <img src="favicon.svg" alt="Tourly logo" />
             </a>
             <h3>Global - Travel Agency</h3>
             <p class="footer-text">
-              Explore the World with Us: Crafting Unforgettable Journeys and Experiences. Let Your Adventure Begin Here.
+              Explore the World with Us: Crafting Unforgettable Journeys and
+              Experiences. Let Your Adventure Begin Here.
             </p>
           </div>
 
@@ -406,7 +405,8 @@
       <div class="footer-bottom">
         <div class="container">
           <p class="copyright">
-            &copy; 2024 <a href="">Global - Travel Agency </a>. All rights reserved
+            &copy; 2024 <a href="">Global - Travel Agency </a>. All rights
+            reserved
           </p>
 
           <ul class="footer-bottom-list">
