--- a/TASK_01/index.html
+++ b/TASK_01/index.html
@@ -1,196 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio | Harshraj</title>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio | Harshraj</title>
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
-</head>
+  </head>
 
-<body>
-  <header role="banner">
-    <nav>
-      <a href="#" class="logo"><i class="fas fa-home"></i></a>
-      <ul class="nav-links">
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <div id="particles-js">
-      <div class="centered-text">
-        <h1>Hi👋🏻, I'm <span>HARSHRAJ</span>!</h1>
+  <body>
+    <header role="banner">
+      <nav>
+        <a href="#" class="logo"><i class="fas fa-home"></i></a>
+        <ul class="nav-links">
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div id="particles-js">
+        <div class="centered-text">
+          <h1>Hi👋🏻, I'm <span class="gradient-text">HARSHRAJ</span>!</h1>        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <section id="about-me">
-      <div class="about-me">ABOUT ME</div>
-      <div class="container">
-        <img src="assets/picture.png" alt="Myself" />
-        <p>
-          Hello, I'm Harshraj! I'm a passionate web developer with a love for
-          coding and creating meaningful projects. Currently, I'm exploring
-          new technologies and enhancing my skills to build innovative
-          solutions.
-        </p>
-      </div>
-      <hr>
-    </section>
+    </header>
+    <main>
+      <section id="about-me">
+        <div class="about-me">ABOUT ME</div>
+        <div class="container">
+          <img src="assets/picture.png" alt="Myself" />
+          <p>
+            Hello, I'm Harshraj! I'm a passionate web developer with a love for
+            coding and creating meaningful projects. Currently, I'm exploring
+            new technologies and enhancing my skills to build innovative
+            solutions.
+          </p>
+        </div>
+        <hr />
+      </section>
 
-    <section id="skills">
-      <h2 class="skills-heading">Skills <i class="fas fa-code"></i></h2>
-      <div class="skill-sections">
-        <div class="Languages">
-          <h3>Programming Languages</h3>
-          <div class="Languages-icon">
-          <img src="assets/c++.png" alt="">
-          <img src="assets/java.png" alt="">
-          <img src="assets/python.png" alt="">
-          <img src="assets/js.png" alt="">
-        </div>
-        </div>
-        <div class="development">
-          <div class="Web">
-            <div>
-              <h3>Web Development</h3>
+      <section id="skills">
+        <h2 class="skills-heading">Skills <i class="fas fa-code"></i></h2>
+        <div class="skill-sections">
+          <div class="Languages">
+            <h3>Programming Languages</h3>
+            <div class="Languages-icon">
+              <img src="assets/c++.png" alt="" />
+              <img src="assets/java.png" alt="" />
+              <img src="assets/python.png" alt="" />
+              <img src="assets/js.png" alt="" />
             </div>
-            <div class="skill-section1">
-              <div class="sub-skills">
-                <h4>Frontend Development</h4>
-                <ul>
-                  <li>HTML5</li>
-                  <li>CSS3</li>
-                  <li>JavaScript</li>
-                  <li>Responsive Design</li>
-                  <li>Frontend Frameworks (e.g., Bootstrap, Tailwind CSS)</li>
-                  <li>Version Control (e.g., Git)</li>
-                </ul>
+          </div>
+          <div class="development">
+            <div class="Web">
+              <div>
+                <h3>Web Development</h3>
               </div>
+              <div class="skill-section1">
+                <div class="sub-skills">
+                  <h4>Frontend Development</h4>
+                  <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Responsive Design</li>
+                    <li>Frontend Frameworks (e.g., Bootstrap, Tailwind CSS)</li>
+                    <li>Version Control (e.g., Git)</li>
+                  </ul>
+                </div>
 
-              <div class="sub-skills">
-                <h4>Backend Development</h4>
-                <ul>
-                  <li>Node.js</li>
-                  <li>Express.js</li>
-                  <li>Database Management (e.g., MongoDB, MySQL)</li>
-                  <li>RESTful APIs</li>
-                  <li>Authentication & Authorization</li>
-                </ul>
+                <div class="sub-skills">
+                  <h4>Backend Development</h4>
+                  <ul>
+                    <li>Node.js</li>
+                    <li>Express.js</li>
+                    <li>Database Management (e.g., MongoDB, MySQL)</li>
+                    <li>RESTful APIs</li>
+                    <li>Authentication & Authorization</li>
+                  </ul>
+                </div>
+
+                <div class="sub-skills">
+                  <h4>Other</h4>
+                  <ul>
+                    <li>Version Control (e.g., Git)</li>
+                    <li>Command Line</li>
+                    <li>Package Managers (e.g., npm, yarn)</li>
+                    <li>Task Runners (e.g., Gulp, Webpack)</li>
+                    <li>Debugging & Testing</li>
+                  </ul>
+                </div>
               </div>
-
-              <div class="sub-skills">
-                <h4>Other</h4>
-                <ul>
-                  <li>Version Control (e.g., Git)</li>
-                  <li>Command Line</li>
-                  <li>Package Managers (e.g., npm, yarn)</li>
-                  <li>Task Runners (e.g., Gulp, Webpack)</li>
-                  <li>Debugging & Testing</li>
-                </ul>
+            </div>
+            <div class="AppDev">
+              <div>
+                <h3>App Development</h3>
+              </div>
+              <div class="skill-section2">
+                <div class="sub-skills">
+                  <h4>Android</h4>
+                  <ul>
+                    <li>Java</li>
+                    <li>Kotlin</li>
+                    <li>Android Studio</li>
+                    <li>UI/UX Design</li>
+                    <li>RESTful APIs</li>
+                    <li>SQLite Database</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-          <div class="AppDev">
-            <div>
-              <h3>App Development</h3>
-            </div>
-            <div class="skill-section2">
-              <div class="sub-skills">
-                <h4>Android</h4>
-                <ul>
-                  <li>Java</li>
-                  <li>Kotlin</li>
-                  <li>Android Studio</li>
-                  <li>UI/UX Design</li>
-                  <li>RESTful APIs</li>
-                  <li>SQLite Database</li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="projects">
-      <div class="project-container">
+      <section id="projects">
+        <div class="project-container">
           <h2>My Projects</h2>
           <div class="project-grid">
-              <div class="project">
-                  <img src="assets/Sudoku.jpeg" alt="Sudoku Game">
-                  <h3>Sudoku Game</h3>
-                  <p>Challenge your logic skills with our interactive Sudoku game. Featuring multiple difficulty levels and a clean, intuitive interface, this project combines advanced algorithms with a user-friendly design to deliver an engaging puzzle experience.</p>
-                  <a href="#">View Project</a>
-              </div>
-              <div class="project">
-                  <img src="assets/To-Do-List.png" alt="To-Do List">
-                  <h3>To-Do List</h3>
-                  <p>Stay organized with our efficient To-Do List application. This project offers a sleek design, easy task management, and local storage to keep your tasks saved between sessions. Perfect for personal productivity and project management.</p>
-                  <a href="#">View Project</a>
-              </div>
-              <div class="project">
-                  <img src="assets/Tic-Tac-Toe.png" alt="Tic-Tac-Toe Game">
-                  <h3>Tic-Tac-Toe Game</h3>
-                  <p>Enjoy a classic game of Tic-Tac-Toe with a modern twist. This project includes an AI opponent, responsive design for all devices, and engaging gameplay. It's a great demonstration of game logic and interactive UI design.</p>
-                  <a href="#">View Project</a>
-              </div>
+            <div class="project">
+              <img src="assets/Sudoku.jpeg" alt="Sudoku Game" />
+              <h3>Sudoku Game</h3>
+              <p>
+                Challenge your logic skills with our interactive Sudoku game.
+                Featuring multiple difficulty levels and a clean, intuitive
+                interface, this project combines advanced algorithms with a
+                user-friendly design to deliver an engaging puzzle experience.
+              </p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="assets/To-Do-List.png" alt="To-Do List" />
+              <h3>To-Do List</h3>
+              <p>
+                Stay organized with our efficient To-Do List application. This
+                project offers a sleek design, easy task management, and local
+                storage to keep your tasks saved between sessions. Perfect for
+                personal productivity and project management.
+              </p>
+              <a href="#">View Project</a>
+            </div>
+            <div class="project">
+              <img src="assets/Tic-Tac-Toe.png" alt="Tic-Tac-Toe Game" />
+              <h3>Tic-Tac-Toe Game</h3>
+              <p>
+                Enjoy a classic game of Tic-Tac-Toe with a modern twist. This
+                project includes an AI opponent, responsive design for all
+                devices, and engaging gameplay. It's a great demonstration of
+                game logic and interactive UI design.
+              </p>
+              <a href="#">View Project</a>
+            </div>
           </div>
-      </div>
-  </section>
-
-    <section id="resume">
-      <div class="container">
-        <h2>HERE'S MY RESUME</h2>
-        <a href="#">RESUME</a>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h1>
-        <a href="contact.html" style="text-decoration: none; color: inherit">Contact</a>
-      </h1>
-      <div class="contact-container">
-        <div class="contact_text">
-          <p>
-            Have inquiries, suggestions, or projects in mind? Interested in
-            collaborating on something together?
-          </p>
-          <p>Don't hesitate to get in touch.</p>
         </div>
-        <div class="social-icons">
-          <a href="https://github.com/hrg-official" target="_blank" rel="noopener noreferrer"
-            class="social-button">GITHUB</a>
-          <a href="mailto:hrg.nitrr@gmail.com" target="_blank" rel="noopener noreferrer" class="social-button">GMAIL</a>
-          <a href="https://www.linkedin.com/in/harshraj-gurupunch-0b2303287/" target="_blank" rel="noopener noreferrer"
-            class="social-button">LINKEDIN</a>
+      </section>
+
+      <section id="resume">
+        <div class="container">
+          <h2>HERE'S MY RESUME</h2>
+          <a href="#">RESUME</a>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
 
-  <footer>
-    <p>
-      Copyright &copy; 2024 - All rights reserved.<br /><span id="time"></span>
-    </p>
-  </footer>
+      <section id="contact">
+        <h1>Contact</h1>
+        <div class="contact-container">
+          <div class="contact_text">
+            <p>
+              Got inquiries, suggestions, or projects in mind? Interested in
+              collaborating? I’d love to hear from you!
+            </p>
+            <p>Feel free to reach out via the platforms below!</p>
+          </div>
+          <div class="social-icons">
+            <a
+              href="https://github.com/hrg-official"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="social-button"
+            >
+              <i class="fab fa-github"></i> GITHUB
+            </a>
+            <a
+              href="mailto:hrg.nitrr@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="social-button"
+            >
+              <i class="fas fa-envelope"></i> GMAIL
+            </a>
+            <a
+              href="https://www.linkedin.com/in/harshraj-gurupunch-0b2303287/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="social-button"
+            >
+              <i class="fab fa-linkedin"></i> LINKEDIN
+            </a>
+          </div>
+          
+          <div class="contact_text">
+            <p>
+              Have specific questions or project details? Please fill out my
+              <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdyQAFiLJXyDUu5FlrqIQVBgCX-hXeZfHccM4tGaai1fFLg8Q/viewform?hl=en_GB&pli=1&hl=en_GB&pli=1&hl=en_GB&pli=1"
+                class="contact-form-link"
+                >Contact Form</a
+              >, and I’ll get back to you as soon as possible!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
 
-  <script>
-    setInterval(updateTime, 1000);
-    function updateTime() {
-      time.innerHTML = new Date();
-    }
-  </script>
+    <footer>
+      <p>
+        Copyright &copy; 2024 Harshraj. All rights reserved.<br /><span
+          id="time"
+        ></span>
+      </p>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="particles.js"></script>
-  <script src="https://kit.fontawesome.com/8a5c9ce28e.js" crossorigin="anonymous"></script>
-</body>
+    <script>
+      setInterval(updateTime, 1000);
+      function updateTime() {
+        time.innerHTML = new Date();
+      }
+    </script>
 
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="particles.js"></script>
+    <script
+      src="https://kit.fontawesome.com/8a5c9ce28e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
